<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:columnCount="2"
    android:useDefaultMargins="true">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:id="@+id/amountEditText"
        android:layout_column="0"
        android:digits="0123456789"
        android:maxLength="6"
        android:ems="10"
        android:layout_columnSpan="2"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:id="@+id/amountEditText2"
        android:layout_column="0"
        android:digits="0123456789"
        android:maxLength="6"
        android:ems="10"
        android:layout_columnSpan="2"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/amountTextView"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:hint="@string/enter_weight"
        android:layout_gravity="fill_horizontal"
        android:background="@color/amount_background"
        android:padding="@dimen/textview_padding"
        android:elevation="@dimen/elevation"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/amountTextView2"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:hint="@string/enter_height"
        android:layout_gravity="fill_horizontal"
        android:background="@color/amount_background"
        android:padding="@dimen/textview_padding"
        android:elevation="@dimen/elevation"/>

    <TextView
        android:id="@+id/bmiTextView"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/total"
        android:textAppearance="?android:textAppearanceMedium" />

    <TextView
        android:id="@+id/totalTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_gravity="fill_horizontal"
        android:background="@color/result_background"
        android:elevation="@dimen/elevation"
        android:gravity="center"
        android:padding="@dimen/textview_padding"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    <TextView
        android:id="@+id/totalLabelTextView"
        android:layout_width="126dp"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="1"
        android:text="@string/total"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/ageTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/age_label"
        android:layout_row="6"
        android:layout_column="0"
        android:layout_columnSpan="2"/>

    <EditText
        android:id="@+id/ageEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:digits="0123456789"
        android:ems="10"
        android:inputType="number"
        android:maxLength="3" />



    <Spinner
        android:id="@+id/genderSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:entries="@array/gender_array" />

    <Spinner
        android:id="@+id/activitySpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:entries="@array/activity_array" />

    <TextView
        android:id="@+id/caloriesTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:background="@color/result_background"
        android:elevation="@dimen/elevation"
        android:gravity="center"
        android:padding="@dimen/textview_padding"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/recipeTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recipe_label" />


</GridLayout>
